<resources>
    <string name="app_name">ChattingApp</string>

    <!-- Sign-In -->
    <string name="app_icon_content_description">Application Icon</string>
    <string name="edt_name_hint">User name</string>
    <string name="edt_password_hint">Password</string>
    <string name="btn_sign_in_text">Sign In</string>
    <string name="btn_sign_up_text">Sign Up</string>

    <!-- Sign-up -->
    <string name="btn_select_image_text">Select</string>
    <string name="btn_upload_text">Upload</string>
    <string name="txt_image_label_text">Profile picture</string>

    <!--Dialogs -->
    <string name="ic_dialog_content_description">Dialog Image</string>
    <string name="txt_no_dialogs">No Dialogs !</string>

    <!--Users-->
    <string name="ic_user_content_description">User Image</string>
    <string name="txt_no_users">No users</string>
    <string name="edt_message_hint">Enter your message ...</string>
    <string name="send_icon_content_description">Press to send</string>


</resources>
