<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground_gradient">


    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_padding_small"
        app:cardCornerRadius="30dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#FFFF"
            android:orientation="vertical"
            android:padding="@dimen/margin_padding_normal">

            <ImageView
                android:id="@+id/avatar_image"
                android:layout_width="168dp"
                android:layout_height="169dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/app_icon_content_description"
                android:src="@drawable/ic_person_black_24dp" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_new_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_small"
                android:drawableEnd="@drawable/ic_person_black_24dp"
                android:hint="@string/edt_name_hint"
                android:inputType="text"
                app:met_floatingLabel="normal" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_new_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_small"
                android:drawableEnd="@drawable/ic_remove_red_eye_black_24dp"
                android:hint="@string/edt_password_hint"
                android:inputType="textPassword"
                app:met_floatingLabel="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/margin_padding_small"
                android:layout_marginTop="@dimen/margin_padding_small"
                android:text="@string/txt_image_label_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <info.hoang8f.widget.FButton
                    android:id="@+id/btn_choose_avatar"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_padding_normal"
                    android:layout_weight="1"
                    android:background="@drawable/back_ground_gradient"
                    android:text="@string/btn_select_image_text"
                    android:textColor="#FFFF"
                    app:cornerRadius="200dp" />

                <info.hoang8f.widget.FButton
                    android:id="@+id/btn_upload"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_padding_normal"
                    android:layout_weight="1"
                    android:backgroundTint="#2454b6"
                    android:text="@string/btn_upload_text"
                    android:textColor="#FFFF"
                    app:cornerRadius="200dp" />


            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>