<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground_gradient"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="168dp"
        android:layout_height="169dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_icon_content_description"
        android:src="@drawable/ic_email_black_24dp"
        android:tint="#FFFF"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:cardCornerRadius="30dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_padding_large"
            android:background="#FFFF"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_small"
                android:drawableEnd="@drawable/ic_person_black_24dp"
                android:hint="@string/edt_name_hint"
                android:inputType="text"
                app:met_floatingLabel="normal" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_small"
                android:drawableEnd="@drawable/ic_remove_red_eye_black_24dp"
                android:hint="@string/edt_password_hint"
                android:inputType="textPassword"
                app:met_floatingLabel="normal" />



            <info.hoang8f.widget.FButton
                android:id="@+id/btn_sign_in"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_padding_small"
                android:layout_marginBottom="@dimen/margin_padding_normal"
                android:background="@drawable/back_ground_gradient"
                android:padding="@dimen/margin_padding_large"
                android:text="@string/btn_sign_in_text"
                android:textColor="#FFFF"
                app:cornerRadius="200dp"
                />


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <info.hoang8f.widget.FButton
        android:id="@+id/btn_sign_up"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_padding_small"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#2454b6"
        android:padding="@dimen/margin_padding_large"
        android:text="@string/btn_sign_up_text"
        android:textColor="#FFFF"
        app:cornerRadius="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />



</android.support.constraint.ConstraintLayout>